fix: add header spacing

--- a/src/app/modules/shared/components/cabecalho/cabecalho.component.scss
+++ b/src/app/modules/shared/components/cabecalho/cabecalho.component.scss
@@ -1,3 +1,3 @@
 .spacer {
-  padding-top: 66px;
+  padding-top: 80px;
 }
